<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IT之家</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet leo adipiscing, porta felis ac, euismod metus. Ut non dolor vitae libero adipiscing mollis id non turpis. Fusce laoreet consequat justo ut condimentum. Aenean molestie enim diam, nec lobortis magna tincidunt eu. Aliquam erat volutpat. Duis vitae lorem a libero vestibulum sodales. Pellentesque sed nisi vulputate felis venenatis rutrum in sit amet dolor. Proin adipiscing velit sed fringilla ultricies. Vivamus faucibus, risus ut lacinia cursus, sapien erat vehicula nisl, eu volutpat magna purus porta massa. Fusce quis sem aliquet, ultricies felis vel, dignissim elit. Proin quis vehicula leo, eget pulvinar quam. Nam molestie risus vel urna porta feugiat. Proin nec odio eu ligula sodales gravida. Donec luctus odio a placerat viverra. Nulla sapien lectus, accumsan in dui eu, feugiat aliquam dui. Vivamus sit amet diam et orci ultricies vulputate ac quis quam.\n\nPhasellus aliquet, massa porta luctus sollicitudin, sem orci ullamcorper enim, ac malesuada felis ipsum nec sem. Suspendisse ac tincidunt elit. Nunc mauris arcu, vestibulum vel tristique et, placerat et felis. Ut tempus, ligula commodo pharetra dignissim, magna velit tincidunt purus, facilisis feugiat purus arcu sed tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed lorem nibh, luctus eu blandit sed, lacinia a diam. Nam vulputate, est ac dignissim adipiscing, orci turpis facilisis diam, a volutpat odio est nec sapien. In rhoncus in justo nec egestas. Praesent enim odio, imperdiet ut cursus nec, feugiat non turpis. Nullam odio ligula, interdum ac dignissim vitae, cursus vitae sem. Ut consectetur metus in turpis placerat, at consectetur augue consectetur. Ut sed neque sed ante vulputate vestibulum. Nulla auctor molestie pharetra. Cras rutrum volutpat neque vel egestas. Pellentesque sollicitudin turpis et diam mattis condimentum.\n\n<i>We\'re no strangers to love\nYou know the rules and so do I\nA full commitment\'s what I\'m thinking of\nYou wouldn\'t get this from any other guy\n\nI just wanna tell you how I\'m feeling\nGotta make you understand\n\nNever gonna give you up\nNever gonna let you down\nNever gonna run around and desert you\nNever gonna make you cry\nNever gonna say goodbye\nNever gonna tell a lie and hurt you</i>\n\nAliquam interdum condimentum felis, ut varius nunc aliquet venenatis. Curabitur tincidunt orci dolor, eget dignissim elit dictum sit amet. Vestibulum non scelerisque urna. Donec eu mollis massa, dictum tempus tellus. Pellentesque semper aliquet tellus fringilla posuere. Vivamus venenatis condimentum purus eu imperdiet. Ut mauris tortor, eleifend a blandit eu, volutpat vitae lacus. Vivamus porttitor est sed ligula venenatis fermentum. In at eleifend metus. Vivamus at tincidunt arcu. Vivamus suscipit porta velit vulputate adipiscing. Vestibulum convallis urna non tortor condimentum euismod. Sed lobortis odio metus, id varius ligula egestas et.\n\n<i><b>wow\nmuch design\nvery styling\nsuch android</b></i></string>
    <string name="tv_empty_data">没有数据</string>
    <string name="tv_android">Android资讯</string>
    <string name="tv_fav">收藏</string>
    <string name="tv_delete">删除</string>
    <string name="tv_content_desc">这是一个ImageView</string>
    <string name="tv_bus_no_hint">请输入线路番号</string>
    <string name="tv_bus_no">线路番号</string>
    <string name="tv_bus_name">线路名称</string>
    <string name="tv_station_name">站台</string>
    <string name="tv_bus_direction">方向</string>
    <string name="tv_bus_line">线路</string>
    <string name="tv_station_bus_no">车牌号</string>
    <string name="tv_station_mark">编号</string>
    <string name="tv_station_bus_time">进站时间</string>
    <string name="tv_bus_update_time">时间</string>
    <string name="tv_bus_stop_spacing">站距</string>
    <string name="JPUSH_KEY">ec7ea7d5c3305f48e3b33f2c</string>
</resources>