<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_bus_name"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:textSize="18sp"
        android:singleLine="true"
        android:ellipsize="end"
        android:drawableBottom="@drawable/line"
        android:textColor="@color/orangered_color"
        android:textStyle="bold" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@android:color/white"
        android:gravity="center_vertical" >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/tv_station_name"
          
            android:textStyle="bold" />

        <Button
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/tv_station_mark"
             
            android:textStyle="bold" />

        <Button
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/tv_station_bus_no"
          
            android:textStyle="bold" />

        <Button
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/tv_station_bus_time"
       
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>