<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_vertical" >

    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/tv_bus_no_hint"
        android:inputType="numberSigned"
        android:paddingLeft="10dp"
        android:paddingRight="48dp"
        android:singleLine="true" />

    <ImageButton
        android:id="@+id/ibtn_search"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/actionbar_item_selector"
        android:src="@drawable/ic_menu_search" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
      android:background="@color/ivorg_color"
        android:layout_below="@+id/et_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_text"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:padding="6dp" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/tv_bus_no" />

        <TextView
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_bus_name" />
    </LinearLayout>

</RelativeLayout>